# FlowBPM

./: .dockerignore  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  README.md
.github/: FUNDING.yml
deployment/eks/: deployment.yaml  namespace.yaml  service.yaml
deployment/scripts/: build.sh  deploy.sh  dockerize.sh
src/: main.cpp
src/AIIntegration/: AIManager.cpp  AIManager.h  CMakeLists.txt  ModelLoader.cpp  ModelLoader.h  PredictionEngine.cpp  PredictionEngine.h
src/AnalyticsReporting/: AnalyticsManager.cpp  AnalyticsManager.h  CMakeLists.txt  Metrics.cpp  Metrics.h  Report.cpp  Report.h
src/BusinessRulesEngine/: BusinessRulesEngine.cpp  BusinessRulesEngine.h  CMakeLists.txt  Rule.cpp  Rule.h  RuleEvaluator.cpp  RuleEvaluator.h
src/CaseManagement/: CMakeLists.txt  Case.h  CaseManager.cpp  CaseManager.h  CaseStatus.cpp  CaseStatus.h
src/CoreEngine/: CMakeLists.txt  ProcessEngine.cpp  ProcessEngine.h  StateManager.cpp  StateManager.h  TaskManager.cpp  TaskManager.h
src/DataManagement/: CMakeLists.txt  DataManager.cpp  DataManager.h  DatabaseConnector.cpp  DatabaseConnector.h  QueryBuilder.cpp  QueryBuilder.h
src/DocumentManagement/: CMakeLists.txt  Document.cpp  Document.h  DocumentManager.cpp  DocumentManager.h  DocumentVersion.cpp  DocumentVersion.h
src/IntegrationAPI/: APIGateway.cpp  APIGateway.h  CMakeLists.txt  RequestHandler.cpp  RequestHandler.h  Response.cpp  Response.h
src/MobileInterface/: CMakeLists.txt
src/MobileInterface/MobileUI/: index.html  mobile.js  style.css
src/ModelingSimulation/: CMakeLists.txt  Scenario.cpp  Scenario.h  SimulationEngine.cpp  SimulationEngine.h  WorkflowModeler.cpp  WorkflowModeler.h
src/MonitoringAuditing/: AuditManager.cpp  AuditManager.h  CMakeLists.txt  Log.cpp  Log.h  MonitoringManager.cpp  MonitoringManager.h
src/Notifications/: CMakeLists.txt  EmailNotification.cpp  EmailNotification.h  NotificationManager.cpp  NotificationManager.h  SMSNotification.cpp  SMSNotification.h
src/PluginSystem/: CMakeLists.txt  PluginInterface.h  PluginManager.cpp  PluginManager.h  SamplePlugin.cpp
src/Scheduler/: CMakeLists.txt  Job.cpp  Job.h  SchedulerManager.cpp  SchedulerManager.h  TaskScheduler.cpp  TaskScheduler.h
src/SecurityModule/: CMakeLists.txt  Role.cpp  Role.h  SecurityManager.cpp  SecurityManager.h  User.cpp  User.h
src/UserInterface/: CMakeLists.txt
src/UserInterface/WebUI/: app.js  index.html  style.css
